--- a/static/index.html
+++ b/static/index.html
@@ -784,25 +784,26 @@
                         <div v-else class="space-y-4">
                             <!-- User Folders Card -->
                             <div v-if="sortedFolders.length >= 0">
-                                <div class="px-4 mb-1 flex items-center justify-between group/header">
-                                    <div class="flex items-center gap-2">
+                                <div class="px-3 mb-1 flex items-center justify-between group/header">
+                                    <div class="flex items-center gap-1">
                                         <h2
-                                            class="text-[11px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-wider">
+                                            class="text-[10px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-wider">
                                             My Folders
                                         </h2>
                                         <button @click.stop="createFolder()" @mousedown.stop
                                             class="text-slate-400 hover:text-blue-500 transition-colors"
                                             title="New Folder">
-                                            <span class="material-symbols-rounded text-[25px]">create_new_folder</span>
+                                            <span class="material-symbols-rounded text-[20px]">create_new_folder</span>
                                         </button>
                                     </div>
                                     <button @click.stop="createNoteInFolder(null)" @mousedown.stop
-                                        class="p-1 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded-full text-slate-400 dark:text-slate-500 hover:text-blue-500 transition-colors"
-                                        title="New Note">
-                                        <div class="relative w-[20px] h-[20px] flex items-center justify-center">
-                                            <span class="material-symbols-rounded text-[25px]">description</span>
+                                        class="flex items-center gap-1.5 px-2 py-1 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded-full text-slate-600 dark:text-slate-400 hover:text-blue-500 transition-colors text-xs font-medium"
+                                        title="Quick Inbox Note">
+                                        <span class="text-[10px] font-medium text-slate-500 dark:text-slate-400">Quick</span>
+                                        <div class="relative w-[16px] h-[16px] flex items-center justify-center">
+                                            <span class="material-symbols-rounded text-[20px]">description</span>
                                             <span
-                                                class="material-symbols-rounded text-[10px] text-amber-500 absolute -bottom-0.5 -right-0.5"
+                                                class="material-symbols-rounded text-[8px] text-amber-500 absolute -bottom-0.5 -right-0.5"
                                                 style="font-variation-settings: 'FILL' 1">bolt</span>
                                         </div>
                                     </button>
