--- a/static/index.html
+++ b/static/index.html
@@ -377,6 +377,11 @@
                     <div v-else id="google-btn" class="w-full"></div>
                 </div>
 
+                <button @click="cancelLogin"
+                    class="mt-4 px-4 py-2 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200 transition-colors">
+                    Cancel
+                </button>
+
                 <p class="mt-6 text-xs text-gray-400 dark:text-slate-500">
                     By continuing, you agree to our Terms of Service and Privacy Policy.
                 </p>
