--- a/static/index.html
+++ b/static/index.html
@@ -478,15 +478,34 @@
                             class="w-full h-full object-contain drop-shadow-xl rounded-2xl">
                     </div>
                     <h3 class="text-xl font-bold text-slate-800 dark:text-white tracking-tight">SHYNOTE</h3>
-                    <div class="flex items-center gap-2 mt-1">
-                        <span
-                            class="px-2 py-0.5 rounded-full bg-slate-100 dark:bg-[#4C566A] text-[10px] font-mono font-bold text-slate-500 dark:text-slate-400">v{{
-                            appVersion }}</span>
-                        <span class="text-[10px] text-slate-400 dark:text-slate-500">MIT License</span>
-                    </div>
                 </div>
 
                 <div class="space-y-16">
+                    <!-- About Section -->
+                    <div>
+                        <h4 class="text-[10px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-widest mb-3 flex items-center gap-1">
+                            <span class="material-symbols-rounded text-[14px]">info</span> About
+                        </h4>
+                        <p class="text-xs text-slate-500 dark:text-slate-400 mb-3 leading-relaxed">
+                            A simple, privacy-focused markdown editor with local-first sync.
+                        </p>
+                        <div class="space-y-1.5 text-xs">
+                            <div class="flex justify-between text-slate-600 dark:text-[#D8DEE9]">
+                                <span>Version</span>
+                                <span class="font-mono font-bold">{{ appVersion }}</span>
+                            </div>
+                            <div class="flex justify-between text-slate-600 dark:text-[#D8DEE9]">
+                                <span>License</span>
+                                <span class="font-bold">MIT</span>
+                            </div>
+                            <a href="https://github.com/cdecl/shynote/blob/main/static/changelog.md" target="_blank"
+                                class="flex justify-between text-blue-600 dark:text-blue-400 hover:underline items-center gap-2">
+                                <span>Changelog</span>
+                                <span class="material-symbols-rounded text-[14px]">open_in_new</span>
+                            </a>
+                        </div>
+                    </div>
+
                     <!-- Data Management -->
                     <div>
                         <h4
@@ -531,47 +550,6 @@
                             </button>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- About Modal -->
-        <div v-if="showAbout"
-            class="fixed inset-0 bg-black/50 z-[60] flex items-center justify-center p-4 animate-fade-in"
-            @click.self="showAbout = false">
-            <div
-                class="bg-white dark:bg-[#2E3440] rounded-2xl shadow-xl w-80 overflow-hidden transform transition-all animate-scale-in border border-slate-200 dark:border-[#3B4252]">
-                <div class="p-6 text-center">
-                    <div class="w-20 h-20 mx-auto mb-4 flex items-center justify-center">
-                        <img src="/static/logo.png" alt="Shynote Logo"
-                            class="w-full h-full object-contain drop-shadow-xl rounded-2xl">
-                    </div>
-                    <h3 class="text-xl font-bold text-slate-800 dark:text-white mb-2">Shynote</h3>
-                    <p class="text-slate-500 dark:text-slate-400 mb-6">A simple, privacy-focused
-                        markdown editor with local-first sync.</p>
-                    <div
-                        class="flex flex-col gap-2 text-sm text-slate-600 dark:text-[#D8DEE9] bg-slate-50 dark:bg-[#3B4252] p-4 rounded-lg mb-6">
-                        <div class="flex justify-between">
-                            <span>Version</span>
-                            <span class="font-mono font-bold">{{ appVersion }}</span>
-                        </div>
-                        <div class="flex justify-between">
-                            <span>Storage</span>
-                            <span class="font-bold">{{ dbType }}</span>
-                        </div>
-                        <div class="flex justify-between">
-                            <span>Changelog</span>
-                            <a href="https://github.com/cdecl/shynote/blob/main/static/changelog.md" target="_blank"
-                                class="font-bold text-blue-600 dark:text-blue-400 hover:underline flex items-center gap-1">
-                                View
-                                <span class="material-symbols-rounded text-[14px]">open_in_new</span>
-                            </a>
-                        </div>
-                    </div>
-                    <button @click="showAbout = false"
-                        class="w-full py-2.5 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-bold transition-colors">
-                        Close
-                    </button>
                 </div>
             </div>
         </div>
@@ -731,7 +709,7 @@
                             <span class="material-symbols-rounded text-[20px]" style="font-variation-settings: 'FILL' 1">note_add</span>
                         </button>
                     </div>
-                    <!-- Bottom: Settings/Profile -->
+                                        <!-- Bottom: Settings/Profile -->
                     <div class="pb-6 flex flex-col items-center gap-4">
                         <button @click="toggleDarkMode"
                             class="p-1.5 text-slate-400 hover:text-amber-500 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded-lg transition-all"
@@ -740,7 +718,11 @@
                                 {{ isDarkMode ? 'light_mode' : 'dark_mode' }}
                             </span>
                         </button>
-
+                        <button @click="openSettingsModal"
+                            class="p-1.5 text-slate-400 hover:text-slate-700 hover:bg-slate-200 dark:hover:text-[#ECEFF4] dark:hover:bg-[#4C566A] rounded-lg transition-all"
+                            title="Settings">
+                            <span class="material-symbols-rounded text-[20px]">settings</span>
+                        </button>
                         <button @click="currentUserId === 'guest' ? showLoginModal() : handleLogout()"
                             class="w-7 h-7 flex items-center justify-center rounded-full overflow-hidden border-2 transition-all"
                             :class="currentUserId === 'guest' ? 'border-slate-300 text-slate-400 hover:border-blue-500 hover:text-blue-500' : 'border-blue-500 text-blue-500'"
@@ -923,14 +905,6 @@
                             </div>
                         </div>
                     </div> <!-- Close Explorer Panel -->
-                    <!-- Sidebar Footer -->
-                    <div class="p-3 border-t border-[#E6E4DD] dark:border-[#3B4252] bg-[#F2F0EA] dark:bg-[#242933] flex items-center justify-between shrink-0 transition-all duration-300">
-                        <div class="flex items-center gap-1">
-                            <button @click.stop="showAbout = true" class="p-2 text-slate-500 hover:text-slate-700 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded-lg transition-colors" title="About"><span class="material-symbols-rounded text-[20px]">info</span></button>
-                            <button @click.stop="openSettingsModal" class="p-2 text-slate-500 hover:text-slate-700 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded-lg transition-colors" title="Settings"><span class="material-symbols-rounded text-[20px]">settings</span></button>
-                        </div>
-                    </div>
-                </div> <!-- Close Content Panel -->
             </div> <!-- Close Sidebar Inner Flex Row -->
         </div> <!-- Close Sidebar Wrapper -->
 
