fix: restore missing Content Panel closing div tag causing folder click bug

--- a/static/index.html
+++ b/static/index.html
@@ -905,6 +905,7 @@
                             </div>
                         </div>
                     </div> <!-- Close Explorer Panel -->
+                </div> <!-- Close Content Panel -->
             </div> <!-- Close Sidebar Inner Flex Row -->
         </div> <!-- Close Sidebar Wrapper -->
 
